# fastapi-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
src/main/: app.py  health.py  settings.py
tests/: conftest.py
