[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.115.6",
    "orjson<4.0.0,>=3.10.12",
    "pydantic-settings<3.0.0,>=2.7.0",
]

[dependency-groups]
dev = [
    "coverage<8.0.0,>=7.6.9",
    "mypy<2.0.0,>=1.13.0",
    "pre-commit<5.0.0,>=4.0.1",
    "pytest<9.0.0,>=8.3.4",
    "ruff<1.0.0,>=0.8.3",
    "types-passlib<2.0.0,>=1.7.7.20240819",
]

# MYPY section
[tool.mypy]
plugins = [
    "pydantic.mypy",
]
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
exclude = [".env", ".venv"]

# RUFF section
[tool.ruff]
line-length = 88
extend-exclude = [".env", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
